[gd_scene load_steps=4 format=3 uid="uid://csi27e1uhde5i"]

[ext_resource type="Script" uid="uid://cou22fmqoqlcx" path="res://menus/online_multiplayer_screen.gd" id="1_dxnvq"]
[ext_resource type="PackedScene" uid="uid://bp6sjera525ip" path="res://menus/lobby_panel.tscn" id="1_x4bum"]
[ext_resource type="Script" uid="uid://b6xd7jiuwinua" path="res://addons/godot_multiplayer/lobby/LobbyClient.gd" id="2_3qlsg"]

[node name="OnlineMultiplayerScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dxnvq")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="LobbyPanel" parent="CenterContainer" instance=ExtResource("1_x4bum")]
unique_name_in_owner = true
layout_mode = 2

[node name="LobbyClient" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_3qlsg")
game = "survivors"
metadata/_custom_type_script = "uid://b6xd7jiuwinua"
